@@ -1,6 +1,8 @@
 package com.A409.backend.domain.pet.service;
 
+import ch.qos.logback.core.net.ObjectWriter;
 import com.A409.backend.domain.pet.dto.PetRequest;
+import com.A409.backend.domain.pet.dto.PetResponse;
 import com.A409.backend.domain.pet.entity.OwnerPet;
 import com.A409.backend.domain.pet.entity.Pet;
 import com.A409.backend.domain.pet.repository.OwnerPetRepository;
@@ -10,7 +12,9 @@ import com.A409.backend.global.enums.ErrorCode;
 import com.A409.backend.global.exception.CustomException;
 import com.A409.backend.global.util.RandomCodeGenerator;
 import com.A409.backend.global.util.uploader.S3Uploader;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
@@ -19,6 +23,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class PetService {
@@ -36,16 +41,40 @@ public class PetService {
         return petRepository.findById(petId).orElseThrow(() -> new CustomException(ErrorCode.RESOURCE_NOT_FOUND));
     }
 
-    public List<Pet> getMyPets(Long ownerId){
+    public List<PetResponse> getMyPets(Long ownerId){
 
         //결과 없다면 빈 배열
         List<OwnerPet> ownerPetsList = ownerPetRepository
-                .findOwnerPetByOwner_OwnerId(ownerId).orElseGet(Collections::emptyList);
+                .findOwnerPetByOwner_OwnerId(ownerId);
 
-        //pet list 리턴
-        return ownerPetsList.stream()
+        List<Pet> petList = ownerPetsList.stream()
                 .map(OwnerPet::getPet)
-                .collect(Collectors.toList());
+                .toList();
+        //pet list 리턴
+        return petList.stream().map(PetResponse::toResponse).toList();
+    }
+
+    public void updatePet(Long ownerId, Long petId,PetRequest petRequest, MultipartFile photo){
+
+        ownerPetRepository.findOwnerPetByOwner_OwnerIdAndPet_PetId(ownerId,petId).orElseThrow(() -> new CustomException(ErrorCode.ACCESS_DENIED));
+        Pet findPet = petRepository.findById(petId).orElseThrow(() -> new CustomException(ErrorCode.RESOURCE_NOT_FOUND));
+
+        findPet.setAge(petRequest.getAge());
+        findPet.setName(petRequest.getName());
+        findPet.setGender(petRequest.getGender());
+        findPet.setSpecies(petRequest.getSpecies());
+
+        if(photo != null){
+            try{
+                String url = s3Uploader.upload(photo,"pet");
+                findPet.setPhoto(url);
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
+
+        }
+
+        petRepository.save(findPet);
     }
 
     public void registerPet(Long ownerId, PetRequest petRequest, MultipartFile photo){
@@ -56,7 +85,7 @@ public class PetService {
 
         if(photo != null){
             try{
-                String url = s3Uploader.upload(photo,"reservation");
+                String url = s3Uploader.upload(photo,"pet");
                 registerPet.setPhoto(url);
             } catch (IOException e) {
                 throw new RuntimeException(e);
@@ -78,8 +107,16 @@ public class PetService {
         ownerPetRepository.save(ownerPet);
     }
 
+
     public void registerPetByCode(Long userId,String petCode){
+        log.info(petCode);
+
         Pet findPet = petRepository.findPetByPetCode(petCode).orElseThrow();
+
+        if(ownerPetRepository.existsByOwner_OwnerIdAndPet_PetId(userId, findPet.getPetId())) {
+            throw new CustomException(ErrorCode.USER_PET_DUPLICATED);
+        }
+
         Owner owner = Owner.builder()
                 .ownerId(userId)
                 .build();
@@ -89,8 +126,23 @@ public class PetService {
                 .pet(findPet)
                 .build();
 
+        log.info(ownerPet.toString());
+
         ownerPetRepository.save(ownerPet);
     }
 
+    @Transactional
+    public void disconnectPet(Long ownerId, Long petId){
+        if(!ownerPetRepository.existsByOwner_OwnerIdAndPet_PetId(ownerId, petId)) {
+            throw new CustomException(ErrorCode.RESOURCE_NOT_FOUND);
+        }
+        ownerPetRepository.deleteByPet_petId(petId); //수정
+    }
 
+    public String getPetCode(Long ownerId, Long petId){
+        if(!ownerPetRepository.existsByOwner_OwnerIdAndPet_PetId(ownerId, petId)) {
+            throw new CustomException(ErrorCode.RESOURCE_NOT_FOUND);
+        }
+        return petRepository.findPetByPetId(petId).orElseThrow(() -> new CustomException(ErrorCode.RESOURCE_NOT_FOUND)).getPetCode();
+    }
 }
